# ColledgeCppBasics

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  input.txt  main.cpp
week1/: homework.cpp
week2/: fractals.cpp  labs.cpp  test.cpp
week3/: base64FilesDecoder.cpp  binaryAddition.cpp  bitOperations.cpp  homeworkSequences.cpp  lecture.cpp  secondGroupProject.cpp  treeGroth.cpp
week4/: homeworkInput.cpp  labs.cpp
week5/: lifeGame.cpp  test2018..cpp  tests.cpp
week6/: labs.cpp  snake.cpp
week7/: binFile.txt  binaryFiles.cpp  dataSender.cpp  file.cpp
week8/: intToNoString.cpp  memoryAllocation.cpp
