cmake_minimum_required(VERSION 3.26)
project(BCPLabs)

set(CMAKE_CXX_STANDARD 17)

add_executable(BCPLabs main.cpp
        week1/homework.cpp
        week2/labs.cpp
        week2/test.cpp
        week2/fractals.cpp
        week3/treeGroth.cpp
        week3/lecture.cpp
        week3/bitOperations.cpp
        week3/binaryAddition.cpp
        week3/homeworkSequences.cpp
        week3/secondGroupProject.cpp
        week4/homeworkInput.cpp
        week4/labs.cpp
        week5/tests.cpp
        week5/lifeGame.cpp
        week5/test2018..cpp
)
